se agrega herramienta para generar PDF

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <a class="btn btn-primary" asp-controller="Home" asp-action="MostrarPDFenPagina" target="_blank">Ver PDF en Pagina</a>
+    <a class="btn btn-primary" asp-controller="Home" asp-action="DescargarPDF" >Descargar PDF</a>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
