--- a/WebApp/Views/SolicitudesPrestamo/Index.cshtml
+++ b/WebApp/Views/SolicitudesPrestamo/Index.cshtml
@@ -9,6 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<a class="btn btn-primary" asp-controller="SolicitudesPrestamo" asp-action="MostrarPDFenPagina" target="_blank">Ver PDF en Pagina</a>
 <table class="table">
     <thead>
         <tr>
