Se crear funcionalidad Cliente

--- a/WebApp/Views/Avales/Index.cshtml
+++ b/WebApp/Views/Avales/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.UrlDocumento)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Persona.Id)
+                @Html.DisplayFor(modelItem => item.Persona.CedulaIdentidad)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SolicitudPrestamo.Id)
