--- a/WebApp/Views/Documentos/Index.cshtml
+++ b/WebApp/Views/Documentos/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.SolicitudPrestamo.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TipoDocumento.Id)
+                @Html.DisplayFor(modelItem => item.TipoDocumento.Descripcion)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
