--- a/WebApp/Views/OrigenesIngresoCliente/Details.cshtml
+++ b/WebApp/Views/OrigenesIngresoCliente/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayNameFor(model => model.TipoActividad)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoActividad.Id)
+            @Html.DisplayFor(model => model.TipoActividad.Descripcion)
         </dd>
     </dl>
 </div>
