--- a/WebApp/Views/OrigenesIngresoCliente/Index.cshtml
+++ b/WebApp/Views/OrigenesIngresoCliente/Index.cshtml
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TipoActividad.Id)
+                @Html.DisplayFor(modelItem => item.TipoActividad.Descripcion)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
