--- a/WebApp/Views/Personas/Details.cshtml
+++ b/WebApp/Views/Personas/Details.cshtml
@@ -74,13 +74,13 @@
             @Html.DisplayNameFor(model => model.Genero)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genero.Id)
+            @Html.DisplayFor(model => model.Genero.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Nacionalidad)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nacionalidad.Id)
+            @Html.DisplayFor(model => model.Nacionalidad.Descripcion)
         </dd>
     </dl>
 </div>
