--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                                 Configuraciones Cliente
                             </a>
                             <ul class="dropdown-menu">
+                                <a class="dropdown-item" asp-area="" asp-controller="ClientesDto" asp-action="Index">Clientes DTO</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Personas" asp-action="Index">Personas</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Generos" asp-action="Index">Generos</a>
