--- a/WebApp/Views/SolicitudesPrestamo/Index.cshtml
+++ b/WebApp/Views/SolicitudesPrestamo/Index.cshtml
@@ -77,7 +77,7 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Producto.Id)
+                @Html.DisplayFor(modelItem => item.Producto.Descripcion)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
