--- a/WebApp/Views/Avales/Delete.cshtml
+++ b/WebApp/Views/Avales/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Persona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Persona.Id)
+            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SolicitudPrestamo)
