--- a/WebApp/Views/Clientes/Delete.cshtml
+++ b/WebApp/Views/Clientes/Delete.cshtml
@@ -45,13 +45,13 @@
             @Html.DisplayNameFor(model => model.EstadoCivil)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstadoCivil.Id)
+            @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Persona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Persona.Id)
+            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
         </dd>
     </dl>
     
