--- a/WebApp/Views/Conyuges/Details.cshtml
+++ b/WebApp/Views/Conyuges/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Persona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Persona.Id)
+            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
         </dd>
     </dl>
 </div>
