--- a/WebApp/Views/Conyuges/Index.cshtml
+++ b/WebApp/Views/Conyuges/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Cliente.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Persona.Id)
+                @Html.DisplayFor(modelItem => item.Persona.CedulaIdentidad)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
