--- a/WebApp/Views/Pagos/Details.cshtml
+++ b/WebApp/Views/Pagos/Details.cshtml
@@ -38,13 +38,13 @@
             @Html.DisplayNameFor(model => model.FormaPago)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FormaPago.Id)
+            @Html.DisplayFor(model => model.FormaPago.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Persona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Persona.Id)
+            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
         </dd>
     </dl>
 </div>
