--- a/WebApp/Views/Pagos/Index.cshtml
+++ b/WebApp/Views/Pagos/Index.cshtml
@@ -49,10 +49,10 @@
                 @Html.DisplayFor(modelItem => item.Cuota.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FormaPago.Id)
+                @Html.DisplayFor(modelItem => item.FormaPago.Descripcion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Persona.Id)
+                @Html.DisplayFor(modelItem => item.Persona.CedulaIdentidad)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
