--- a/WebApp/Views/SolicitudesPrestamo/Delete.cshtml
+++ b/WebApp/Views/SolicitudesPrestamo/Delete.cshtml
@@ -69,7 +69,7 @@
             @Html.DisplayNameFor(model => model.Producto)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Producto.Id)
+            @Html.DisplayFor(model => model.Producto.Descripcion)
         </dd>
     </dl>
     
