--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
                                 Configuraciones Producto
                             </a>
                             <ul class="dropdown-menu">
+                                <a class="dropdown-item" asp-area="" asp-controller="ProductosDto" asp-action="Index">Productos DTO</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Productos" asp-action="Index">Productos</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Requisitos" asp-action="Index">Requisitos</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Beneficios" asp-action="Index">Beneficios</a>
