--- a/WebApp/Views/ClientesDto/Delete.cshtml
+++ b/WebApp/Views/ClientesDto/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model WebApp.Dtos.ClienteDto
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -53,16 +54,52 @@
             @Html.DisplayFor(model => model.Telefono)
         </dd>
         @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Genero)
+        @Html.DisplayNameFor(model => model.Genero)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Genero.Descripcion)
+        @Html.DisplayFor(model => model.Genero.Descripcion)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nacionalidad)
+        @Html.DisplayNameFor(model => model.Nacionalidad)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nacionalidad.Descripcion)
+        @Html.DisplayFor(model => model.Nacionalidad.Descripcion)
+        </dd>*@
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.DomicilioAlternativo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.DomicilioAlternativo)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TelefonoLaboral)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TelefonoLaboral)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PersonaPoliticamenteExpuesta)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PersonaPoliticamenteExpuesta)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Scoring)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Scoring)
+        </dd>
+        @*<dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.EstadoCivil)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Persona)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Persona.CedulaIdentidad)
         </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DomicilioAlternativo)
@@ -107,16 +144,17 @@
             @Html.DisplayFor(model => model.MontoLiquidoPercibido)
         </dd>
         @*<dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoCivil)
+        @Html.DisplayNameFor(model => model.EstadoCivil)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
+        @Html.DisplayFor(model => model.EstadoCivil.Descripcion)
         </dd>*@
+        
         @if (Model.ConyugeCedulaIdentidad != null)
         {
             <div class="col-md-6 conyuge-form">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.ConyugeCedulaIdentidad)
+                   @Html.DisplayNameFor(model => model.ConyugeCedulaIdentidad)
                 </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.ConyugeCedulaIdentidad)
@@ -160,8 +198,10 @@
             </div>
         }
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
