--- a/WebApp/Views/ClientesDto/Edit.cshtml
+++ b/WebApp/Views/ClientesDto/Edit.cshtml
@@ -77,7 +77,7 @@
                 <label asp-for="EstadoCivilId" class="control-label"></label>
                 <select asp-for="EstadoCivilId" class="form-control" asp-items="ViewBag.EstadoCivilId"></select>
             </div>
-            <div class="col-md-6 conyuge-form" style="display: none;">
+            <div class="col-md-6 conyuge-form" style="display: none">
                 <input type="hidden" asp-for="ConyugeId" />
                 <input type="hidden" asp-for="ConyugePersonaId" />
                 <div class="form-group">
@@ -167,14 +167,19 @@
     }
 
     <script type="text/javascript">
+        var divConyuge = document.getElementById("EstadoCivilId");
+        divConyuge.addEventListener("change",Refresh);
+        Refresh();
+        /*
         $(document).ready(function () {
             //On Change
             $('#EstadoCivilId').change(function () {
                 mostrarFormConguye();
             });
         });
+        */
         //Funcion Calcular Cuota
-        function mostrarFormConguye() {
+        function Refresh() {
             $.ajax({
                 type: "POST",
                 url: "/EstadosCivil/RequiereDatosConyuge",
