Se crear funcionalidad Solicitud Prestamo

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
                                 Configuraciones Solicitudes
                             </a>
                             <ul class="dropdown-menu">
+                                <a class="dropdown-item" asp-area="" asp-controller="SolicitudesPrestamoDto" asp-action="Index">Solicitudes Prestamo DTO</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="SolicitudesPrestamo" asp-action="Index">Solicitudes Prestamo</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Avales" asp-action="Index">Avales</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Documentos" asp-action="Index">Documentos</a>
