Se modificar funcionalidad Solicitud Prestamo

--- a/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
@@ -12,13 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ClienteId" />
+            <input type="hidden" asp-for="ProductoId" />
             <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId" disabled></select>
+                <label asp-for="ClienteDto.Id" class="control-label"></label>
+                <select asp-for="ClienteDto.Id" class="form-control" asp-items="ViewBag.ClienteId" disabled></select>
+                <!--Cuidado con la opcion Disable, ya que no pasa el valor hacia el formulario -->
             </div>
             <div class="form-group">
-                <label asp-for="ProductoId" class="control-label"></label>
-                <select asp-for="ProductoId" class="form-control" asp-items="ViewBag.ProductoId" disabled></select>
+                <label asp-for="ProductoDto.Id" class="control-label"></label>
+                <select asp-for="ProductoDto.Id" class="form-control" asp-items="ViewBag.ProductoId" disabled></select>
+                <!--Cuidado con la opcion Disable, ya que no pasa el valor hacia el formulario -->
             </div>
             <div class="form-group">
                 <label asp-for="MontoSolicitado" class="control-label"></label>
@@ -47,15 +51,50 @@
             
             @for (int i = 0; i < Model.AvalesDto.Count; i++)
             {
-                <div class="form-group">
-                    <label asp-for="AvalesDto[i].CedulaIdentidad" class="control-label"></label>
-                    <input asp-for="AvalesDto[i].CedulaIdentidad" class="form-control" />
-                    <span asp-validation-for="AvalesDto[i].CedulaIdentidad" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="AvalesDto[i].Nombre" class="control-label"></label>
-                    <input asp-for="AvalesDto[i].Nombre" class="form-control" />
-                    <span asp-validation-for="AvalesDto[i].Nombre" class="text-danger"></span>
+                <div class="col-md-6 AvalesDto[i]-form">
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].CedulaIdentidad" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].CedulaIdentidad" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].CedulaIdentidad" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Nombre" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Nombre" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Nombre" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Apellido" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Apellido" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Apellido" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].FechaNacimiento" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].FechaNacimiento" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].FechaNacimiento" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].GeneroId" class="control-label"></label>
+                        <select asp-for="AvalesDto[i].GeneroId" class="form-control" asp-items="ViewBag.GeneroId"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Domicilio" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Domicilio" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Domicilio" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].CorreoElectronico" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].CorreoElectronico" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].CorreoElectronico" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Telefono" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Telefono" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Telefono" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].NacionalidadId" class="control-label"></label>
+                        <select asp-for="AvalesDto[i].NacionalidadId" class="form-control" asp-items="ViewBag.NacionalidadId"></select>
+                    </div>
                 </div>
                 
             }
