--- a/WebApp/Views/SolicitudesPrestamoDto/Create.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Create.cshtml
@@ -1,5 +1,112 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model WebApp.Dtos.SolicitudPrestamoDto
+
 @{
+    ViewData["Title"] = "Create - Step 2";
+}
+
+<h1>Create - Step 2</h1>
+
+<h4>SolicitudPrestamo - Paso 2</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="ClienteId" class="control-label"></label>
+                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId" disabled></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ProductoId" class="control-label"></label>
+                <select asp-for="ProductoId" class="form-control" asp-items="ViewBag.ProductoId" disabled></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="MontoSolicitado" class="control-label"></label>
+                <input asp-for="MontoSolicitado" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="CantidadCuotas" class="control-label"></label>
+                <input asp-for="CantidadCuotas" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="ValorCuota" class="control-label"></label>
+                <input asp-for="ValorCuota" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="CostoTotalFinanciero" class="control-label"></label>
+                <input asp-for="CostoTotalFinanciero" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="FechaSolicitud" class="control-label"></label>
+                <input asp-for="FechaSolicitud" class="form-control" readonly />
+            </div>
+            <div class="form-group">
+                <label asp-for="CantidadAvales" class="control-label"></label>
+                <input asp-for="CantidadAvales" class="form-control" readonly />
+            </div>
+
+            @for (int i = 0; i < Model.AvalesDto.Count; i++)
+            {
+                <div class="col-md-6 AvalesDto[i]-form">
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].CedulaIdentidad" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].CedulaIdentidad" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].CedulaIdentidad" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Nombre" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Nombre" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Nombre" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Apellido" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Apellido" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Apellido" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].FechaNacimiento" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].FechaNacimiento" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].FechaNacimiento" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].GeneroId" class="control-label"></label>
+                        <select asp-for="AvalesDto[i].GeneroId" class="form-control" asp-items="ViewBag.GeneroId"></select>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Domicilio" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Domicilio" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Domicilio" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].CorreoElectronico" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].CorreoElectronico" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].CorreoElectronico" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].Telefono" class="control-label"></label>
+                        <input asp-for="AvalesDto[i].Telefono" class="form-control" />
+                        <span asp-validation-for="AvalesDto[i].Telefono" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AvalesDto[i].NacionalidadId" class="control-label"></label>
+                        <select asp-for="AvalesDto[i].NacionalidadId" class="form-control" asp-items="ViewBag.NacionalidadId"></select>
+                    </div>
+                </div>
+
+            }
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
