--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebApp
 @using WebApp.Models
 @using Microsoft.AspNetCore.Identity
-@addTagHelper Identity.CustomTagHelpers.*, Identity
+@addTagHelper WebApp.Helpers.*, Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
